# hbase-operator

./: .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  Dockerfile  Makefile  README.adoc  README.md  ca.crt  crate-hashes.json  deny.toml  renovate.json  test-results.txt  tree  ycsb.yaml
.ci/integration-tests/aws-eks/: cluster.yaml  test.sh
.ci/integration-tests/azure-aks/: cluster.yaml  test.sh
.ci/integration-tests/hcloud-centos-8/: cluster.yaml  test.sh
.ci/integration-tests/ionos-k8s/: cluster.yaml
.github/ISSUE_TEMPLATE/: 02-bug_report.yml  bug_report.yml  config.yml  new_version.md
.github/workflows/: build.yaml  build.yml  integration-test.yml  publish_dev_artifacts.yml  publish_main_artifacts.yml  publish_pr_artifacts.yml  publish_release_artifacts.yml
.readme/: README.md.j2
.readme/partials/: main.md.j2
deploy/: DO_NOT_EDIT.md
deploy/config-spec/: properties.yaml
deploy/crd/: hbasecluster.crd.yaml  restart.crd.yaml  start.crd.yaml  stop.crd.yaml
deploy/helm/hbase-operator/: Chart.yaml  README.md  values.yaml
deploy/helm/hbase-operator/configs/: properties.yaml
deploy/helm/hbase-operator/crds/: crds.yaml
deploy/helm/hbase-operator/templates/: clusterrole-operator.yaml  clusterrole-product.yaml  roles.yaml
deploy/manifests/: configmap.yaml  crds.yaml  deployment.yaml  roles.yaml  serviceaccount.yaml
deploy/olm/: bundle.sh
deploy/olm/23.1.0/manifests/: stackable-hbase-operator.clusterserviceversion.yaml
deploy/olm/23.1.0/metadata/: dependencies.yaml
deploy/olm/23.4.0/manifests/: stackable-hbase-operator.clusterserviceversion.yaml
deploy/olm/23.4.0/metadata/: dependencies.yaml
docker/: Dockerfile
docs/: antora.yml  templating_vars.yaml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: commandline_args.adoc  discovery.adoc  env_var_args.adoc  index.adoc  installation.adoc  usage.adoc
docs/modules/ROOT/partials/: supported-versions.adoc
docs/modules/getting_started/pages/: first_steps.adoc  index.adoc  installation.adoc
docs/modules/hbase/: nav.adoc
docs/modules/hbase/pages/: cluster_operations.adoc  discovery.adoc  env_var_args.adoc  index.adoc  pod_placement.adoc  usage.adoc
docs/modules/hbase/partials/: nav.adoc  supported-versions.adoc
examples/: restart.command.example.yaml  simple-hbase-cluster.yaml  start.command.example.yaml  stop.command.example.yaml
extra/: crds.yaml
nix/: meta.json
rego/: hbase.rego  hbase_test.rego
rust/crd/: Cargo.toml
rust/crd/src/: affinity.rs  commands.rs  error.rs  lib.rs  security.rs
rust/operator/: Cargo.toml
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: discovery.rs  framework.rs  hbase_controller.rs  kerberos.rs  main.rs  product_logging.rs  rbac.rs  stackable-hbase-operator.rs  test_utils.rs  zookeeper.rs
rust/operator-binary/src/config/: jvm.rs
rust/operator-binary/src/controller/: dereference.rs  mod.rs  validate.rs  zookeeper.rs
rust/operator-binary/src/crd/: affinity.rs  mod.rs  security.rs
rust/operator-binary/src/framework/: role_utils.rs
rust/operator-binary/src/operations/: graceful_shutdown.rs  pdb.rs
rust/operator-binary/src/security/: opa.rs
rust/operator-binary/src/webhooks/: conversion.rs
rust/operator/src/: error.rs  lib.rs
scripts/: docs_templating.sh  generate-manifests.sh  run-tests
tests/: infrastructure.yaml  release.yaml  test-definition.yaml
tests/templates/kuttl/cluster-operation/: 02-install-hdfs.yaml.j2  03-assert.yaml  03-install-hbase.yaml.j2  10-assert.yaml  10-pause-hbase.yaml.j2  20-assert.yaml  20-stop-hbase.yaml.j2  30-assert.yaml  30-restart-hbase.yaml.j2
tests/templates/kuttl/external-access/: 02-install-hdfs.yaml.j2  03-assert.yaml  03-install-hbase.yaml.j2  20-assert.yaml.j2  20-install-hbase.yaml  30-access-hbase.txt.j2  30-access-hbase.yaml  install-hbase.yaml.j2
tests/templates/kuttl/kerberos/: 01-install-krb5-kdc.yaml.j2  02-create-kerberos-secretclass.yaml.j2  10-install-zk.yaml.j2  11-assert.yaml  11-install-hdfs.yaml.j2  16-install-hdfs.yaml.j2  20-access-hdfs.yaml.j2  21-assert.yaml  21-install-hbase.yaml.j2  30-assert.yaml  30-install-hbase.yaml.j2  40-access-hbase.j2  40-grant-testuser-access.yaml  41-access-hbase.j2  41-access-hbase.yaml.j2  41-assert.yaml  42-assert.yaml  42-test-rest-server.yaml  42-test-rest-server.yaml.j2
tests/templates/kuttl/logging/: 01-assert.yaml  01-install-hbase-vector-aggregator.yaml  02-install-zookeeper.yaml.j2  03-install-hdfs.yaml.j2  04-assert.yaml  04-create-configmap-with-prepared-logs.yaml  04-install-hbase.yaml.j2  05-assert.yaml  05-copy-prepared-logs.yaml  05-install-hbase.yaml.j2  06-assert.yaml  06-install-hbase-test-runner.yaml  06-test-log-aggregation.yaml  hbase-vector-aggregator-values.yaml.j2  test_log_aggregation.py
tests/templates/kuttl/omid/: 00-limit-range.yaml  10-install-zookeeper.yaml.j2  20-install-hdfs.yaml.j2  30-assert.yaml  30-install-hbase.yaml.j2  40-assert.yaml  40-install-omid.yaml.j2  50-assert.yaml  50-setup-example-tx-table.yaml  80-assert.yaml  80-install-omid.yaml.j2
tests/templates/kuttl/opa/: 01-install-krb5-kdc.yaml.j2  02-create-kerberos-secretclass.yaml.j2  10-assert.yaml  10-install-zk.yaml.j2  11-install-opa.yaml.j2  12-rego-rules.txt.j2  16-install-hdfs.yaml.j2  30-assert.yaml  30-install-hbase.yaml.j2  41-access-hbase.yaml.j2  42-test-rest-server.yaml
tests/templates/kuttl/orphaned_resources/: 00-assert.yaml.j2  02-assert.yaml  (+11 more)
(+150 files in other folders)
