[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Contains the Apache HBase CRD structs and utilities"
edition = "2021"
license = "OSL-3.0"
name = "stackable-hbase-crd"
repository = "https://github.com/stackabletech/hbase-operator"
version = "0.0.0-dev"
publish = false

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.40.2" }
serde = "1.0"
serde_json = "1.0"
snafu = "0.7"
strum = { version = "0.24", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
rstest = "0.16"
serde_yaml = "0.9"
