[package]
name = "stackable-hbase-crd"
description = "Contains the Apache HBase CRD structs and utilities"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
product-config.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-escape.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
strum.workspace = true
tracing.workspace = true
lazy_static.workspace = true

[dev-dependencies]
rstest.workspace = true
serde_yaml.workspace = true
indoc.workspace = true
