[package]
name = "stackable-hbase-operator"
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Stackable Operator for Apache HBase"
license = "OSL-3.0"
version = "0.6.0-nightly"
edition = "2021"
repository = "https://github.com/stackabletech/hbase-operator"
publish = false

[dependencies]
anyhow = "1.0"
clap = "4.1"
fnv = "1.0"
futures = { version = "0.3", features = ["compat"] }
serde = "1.0"
snafu = "0.7"
stackable-hbase-crd = { path = "../crd" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.30.2" }
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }
stackable-hbase-crd = { path = "../crd" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.30.2" }
