[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for Apache HBase - The Operator Library"
edition = "2018"
license = "OSL-3.0"
name = "stackable-hbase-operator"
repository = "https://github.com/stackabletech/hbase-operator"
version = "0.2.0-nightly"

[dependencies]
stackable-hdfs-crd = { git = "https://github.com/stackabletech/hdfs-operator.git", tag = "0.2.0"}
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.4.0" }
stackable-hbase-crd = { path = "../crd" }
stackable-zookeeper-crd = { git = "https://github.com/stackabletech/zookeeper-operator.git", tag = "0.6.0"}

async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.22"
strum_macros = "0.22"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
rstest = "0.11"
